// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractMethodCall: action close model with contract key 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "type": "METHOD_CALL_CLOSE_MODAL",
}
`;

exports[`ContractMethodCall: action fetch arguments failure 1`] = `
Object {
  "error": "ERROR",
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "type": "METHOD_CALL_FETCH_ARGS_FAILURE",
}
`;

exports[`ContractMethodCall: action fetch arguments request 1`] = `
Object {
  "address": "8070db2390462e2b5748085bde1350590e08bb17",
  "chainId": "1c8792a7e43d132487500936d946f510e7ff51635838060757bf886828403a14",
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "name": "Greeter",
  "symbol": "greet",
  "type": "METHOD_CALL_FETCH_ARGS_REQUEST",
}
`;

exports[`ContractMethodCall: action fetch arguments success 1`] = `
Object {
  "args": Object {
    "_greeting": Object {
      "dynamic": true,
      "index": 0,
      "type": "String",
    },
  },
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "type": "METHOD_CALL_FETCH_ARGS_SUCCESS",
}
`;

exports[`ContractMethodCall: action method call failure 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "result": "ERROR",
  "type": "METHOD_CALL_FAILURE",
}
`;

exports[`ContractMethodCall: action method call request 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "payload": Object {
    "args": Object {},
    "contractAddress": "8070db2390462e2b5748085bde1350590e08bb17",
    "contractName": "Greeter",
    "methodName": "greet",
    "password": "pass",
    "userAddress": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
    "username": "tanuj",
  },
  "type": "METHOD_CALL_REQUEST",
}
`;

exports[`ContractMethodCall: action method call success 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "result": Object {
    "hash": "8f6fcd037e028f84ec2e9462c4e29444cd3456c8bc8705723f0c36d075c14c5d",
    "status": "Success",
  },
  "type": "METHOD_CALL_SUCCESS",
}
`;

exports[`ContractMethodCall: action open model with contract key 1`] = `
Object {
  "key": "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17",
  "type": "METHOD_CALL_OPEN_MODAL",
}
`;
